--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode/
+.ipynb_checkpoints/
+__pycache__
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# data
+src/images/
+api/env/
