--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.9"  # optional since v1.27.0
 services:
   web:
-    image: trip-recom-web
+    build: .
     container_name: client
     ports:
       - "3000:3000"
     networks:
       - backend
   api:
-    image: trip-recom-api
+    build: ./api
     container_name: server
     ports:
       - "5000:5000"
