--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-leaflet-control": "^2.1.2",
+    "react-leaflet-markercluster": "*",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
