--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
     "cross-fetch": "^3.1.4",
     "heap-js": "^2.1.5",
     "leaflet": "^1.7.1",
-    "leaflet.heat": "^0.2.0",
     "leaflet.markercluster": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
-    "react-leaflet-control": "^2.1.2",
     "react-leaflet-markercluster": "*",
     "react-scripts": "4.0.3",
-    "react-vis": "^1.11.7",
-    "recharts": "^2.0.9",
-    "web-vitals": "^1.1.1"
+    "recharts": "^2.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
